--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <a href="https://github.com/MatheusPatricioo?tab=overview&from=2024-10-01&to=2024-10-04" target="_blank">Projects</a>
             <a href="mailto:teste@gmail.com">Contact</a>
         </div>
-        <div class="social-icons">
+        <!-- <div class="social-icons">
             <a href="https://wa.me/31995461381" target="_blank"><i class="fab fa-whatsapp"></i></a>
             <a href="mailto:matheuspatricio.aspx@gmail.com"><i class="fas fa-envelope"></i></a>
             <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        </div>
+        </div> -->
     </div>
 
     <div id="top" class="hero">
@@ -75,9 +75,9 @@
     <!-- Footer -->
     <footer>
         <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://wa.me/31995461381" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <a href="mailto:matheuspatricio.aspx@gmail.com"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
         <p>&copy; 2024 Matheus Patricio. All Rights Reserved.</p>
     </footer>
