--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
         <h1>What I Offer</h1>
         <div class="services-carousel">
             <div class="service">
-                <img src="https://placehold.co/80x80" alt="Icon representing Web Development">
+                <img src="img/front.png" alt="Icon representing Web Development">
                 <h3>Web Development</h3>
                 <p>I create responsive websites using HTML, CSS, JavaScript, and React, ensuring smooth user experience and modern design.</p>
             </div>
             <div class="service">
-                <img src="https://placehold.co/80x80" alt="Icon representing Backend Development">
+                <img src="img/front.png" alt="Icon representing Backend Development">
                 <h3>Backend Development</h3>
                 <p>Specializing in PHP and Laravel, I develop scalable backend systems for dynamic web applications.</p>
             </div>
             <div class="service">
-                <img src="https://placehold.co/80x80" alt="Icon representing Fullstack Development">
+                <img src="img/front.png" alt="Icon representing Fullstack Development">
                 <h3>Fullstack Solutions</h3>
                 <p>With expertise in both frontend and backend technologies, I build full-stack web solutions tailored to client needs.</p>
             </div>
