--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                 <p>I create responsive websites using HTML, CSS, JavaScript, and React, ensuring smooth user experience and modern design.</p>
             </div>
             <div class="service">
-                <img src="img/front.png" alt="Icon representing Backend Development">
+                <img src="img/web.png" alt="Icon representing Backend Development">
                 <h3>Backend Development</h3>
                 <p>Specializing in PHP and Laravel, I develop scalable backend systems for dynamic web applications.</p>
             </div>
             <div class="service">
-                <img src="img/front.png" alt="Icon representing Fullstack Development">
+                <img src="img/full.png" alt="Icon representing Fullstack Development">
                 <h3>Fullstack Solutions</h3>
                 <p>With expertise in both frontend and backend technologies, I build full-stack web solutions tailored to client needs.</p>
             </div>
