--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="logo"></div>
         <div class="nav-links">
             <a href="#" onclick="scrollToSection('top')">Home</a>
-            <a href="#" onclick="toggleAbout()">About</a>
+            <!-- <a href="#" onclick="toggleAbout()">About</a> -->
             <a href="#" onclick="scrollToSection('offer')">Skills</a>
             <a href="https://github.com/MatheusPatricioo?tab=overview&from=2024-10-01&to=2024-10-04" target="_blank">Projects</a>
             <a href="mailto:teste@gmail.com">Contact</a>
@@ -66,6 +66,7 @@
     </div>
 
     <!-- Footer -->
+     
     <footer>
         <div class="social-icons">
             <a href="https://wa.me/31995461381" target="_blank"><i class="fab fa-whatsapp"></i></a>
