--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#" onclick="scrollToSection('top')">Home</a>
             <!-- <a href="#" onclick="toggleAbout()">About</a> -->
             <a href="#" onclick="scrollToSection('offer')">Skills</a>
-            <a href="https://github.com/MatheusPatricioo?tab=overview&from=2024-10-01&to=2024-10-04" target="_blank">Projects</a>
+            <a href="https://github.com/MatheusPatricioo?tab=repositories" target="_blank">Projects</a>
             <a href="mailto:teste@gmail.com">Contact</a>
         </div>
     </div>
@@ -29,7 +29,7 @@
         <div class="hero-text">
             <h1 id="typed-text"></h1>
             <p>Fullstack Developer | PHP & Laravel Expert | React Enthusiast</p>
-            <button onclick="window.location.href='https://github.com/MatheusPatricioo?tab=repositories'">See My Work</button>
+            <button onclick="window.location.href='https://github.com/MatheusPatricioo'">See My Work</button>
         </div>
     </div>
 
