--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
+    <link rel="stylesheet" href="css/style.css">
+    
 </head>
 
 <body>
@@ -20,8 +23,8 @@
             <a href="#" onclick="scrollToSection('top')">Home</a>
             <!-- <a href="#" onclick="toggleAbout()">About</a> -->
             <a href="#" onclick="scrollToSection('offer')">Skills</a>
-            <a href="https://github.com/MatheusPatricioo?tab=repositories" target="_blank">Projects</a>
-            <a href="mailto:teste@gmail.com">Contact</a>
+            <a href="projetos.html" target="_blank">Projects</a>
+            <a href="contact.html">Contact</a>
         </div>
     </div>
 
@@ -50,7 +53,8 @@
             <div class="service">
                 <img src="img/front.png" alt="Icon representing Web Development">
                 <h3>Web Development</h3>
-                <p>I create responsive websites using HTML, CSS, JavaScript, and React, ensuring smooth user experience and modern design.</p>
+                <p>I create responsive websites using HTML, CSS, JavaScript, and React, ensuring smooth user experience
+                    and modern design.</p>
             </div>
             <div class="service">
                 <img src="img/web.png" alt="Icon representing Backend Development">
@@ -60,13 +64,14 @@
             <div class="service">
                 <img src="img/full.png" alt="Icon representing Fullstack Development">
                 <h3>Fullstack Solutions</h3>
-                <p>With expertise in both frontend and backend technologies, I build full-stack web solutions tailored to client needs.</p>
+                <p>With expertise in both frontend and backend technologies, I build full-stack web solutions tailored
+                    to client needs.</p>
             </div>
         </div>
     </div>
 
     <!-- Footer -->
-     
+
     <footer>
         <div class="social-icons">
             <a href="https://wa.me/31995461381" target="_blank"><i class="fab fa-whatsapp"></i></a>
@@ -77,7 +82,8 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="script.js"></script>
 </body>
 
