--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,14 @@
 </head>
 <body>
 
+
+    <div id="top" class="hero">
+        <div class="hero-text">
+            <h1>Contact Me</h1>
+            <p>Get in touch to discuss projects, collaboration, or opportunities!</p>
+        </div>
+    </div>
+    
     <div class="navbar">
         <div class="logo"></div>
         <div class="nav-links">
@@ -33,10 +41,10 @@
         </section>
 
         <section class="link-list">
-            <a href="https://github.com/matheuspatricio" class="link-button">Explore My GitHub Repositories 🚀</a>
+            <a href="https://github.com/MatheusPatricioo" class="link-button">Explore My GitHub Repositories 🚀</a>
             <a href="https://www.linkedin.com/in/matheuspatricio" class="link-button">Connect with Me on LinkedIn 💼</a>
-            <a href="contact.html" class="link-button">Hire Me – Let's Work Together 🤝</a>
-            <a href="projects.html" class="link-button">See My Latest Projects 📂</a>
+            <a href="https://wa.me/31995461381" class="link-button">Hire Me – Let's Work Together 🤝</a>
+            <a href="https://github.com/MatheusPatricioo?tab=repositories" class="link-button">See My Latest Projects 📂</a>
             <a href="mailto:matheuspatricio.aspx@gmail.com" class="link-button">Get in Touch via Email ✉️</a>
         </section>
     </main>
