--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#" onclick="scrollToSection('top')">Home</a>
             <!-- <a href="#" onclick="toggleAbout()">About</a> -->
             <a href="#" onclick="scrollToSection('offer')">Skills</a>
-            <a href="projetos.html" target="_blank">Projects</a>
+            <a href="projects.html" target="_blank">Projects</a>
             <a href="contact.html">Contact</a>
         </div>
     </div>
