--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styleContact.css">
 </head>
+
 <body>
 
 
@@ -16,22 +18,24 @@
             <p>Get in touch to discuss projects, collaboration, or opportunities!</p>
         </div>
     </div>
-    
+
     <div class="navbar">
         <div class="logo"></div>
         <div class="nav-links">
-            <a href="index.html" onclick="scrollToSection('top')">Home</a>
+            <a href="index.html">Home</a>
+            <!-- <a href="#" onclick="toggleAbout()">About</a> -->
             <a href="#" onclick="scrollToSection('offer')">Skills</a>
-            <a href="projetos.html" target="_blank">Projects</a>
+            <a href="projects.html">Projects</a>
             <a href="contact.html">Contact</a>
         </div>
     </div>
-    
+
     <main>
         <section class="profile-section">
             <img src="img/eu.png" alt="Matheus Patricio" class="profile-picture">
             <h1>Matheus Patricio</h1>
-            <p class="description">A fullstack developer with a passion for solving complex problems and building innovative solutions. Let’s collaborate and bring ideas to life through code!</p>
+            <p class="description">A fullstack developer with a passion for solving complex problems and building
+                innovative solutions. Let’s collaborate and bring ideas to life through code!</p>
             <div class="social-icons">
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-youtube"></i></a>
@@ -44,7 +48,8 @@
             <a href="https://github.com/MatheusPatricioo" class="link-button">Explore My GitHub Repositories 🚀</a>
             <a href="https://www.linkedin.com/in/matheuspatricio" class="link-button">Connect with Me on LinkedIn 💼</a>
             <a href="https://wa.me/31995461381" class="link-button">Hire Me – Let's Work Together 🤝</a>
-            <a href="https://github.com/MatheusPatricioo?tab=repositories" class="link-button">See My Latest Projects 📂</a>
+            <a href="https://github.com/MatheusPatricioo?tab=repositories" class="link-button">See My Latest Projects
+                📂</a>
             <a href="mailto:matheuspatricio.aspx@gmail.com" class="link-button">Get in Touch via Email ✉️</a>
         </section>
     </main>
@@ -61,4 +66,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
