--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
     <link rel="stylesheet" href="css/style.css">
-    
+
 </head>
 
 <body>
     <div class="navbar">
         <div class="logo"></div>
         <div class="nav-links">
-            <a href="#" onclick="scrollToSection('top')">Home</a>
+            <a href="index.html">Home</a>
             <!-- <a href="#" onclick="toggleAbout()">About</a> -->
             <a href="#" onclick="scrollToSection('offer')">Skills</a>
-            <a href="projects.html" target="_blank">Projects</a>
+            <a href="projects.html">Projects</a>
             <a href="contact.html">Contact</a>
         </div>
     </div>
