--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="categories">
-        <h2>Posts Categories</h2>
+        <h2>Projects</h2>
         <div class="category-carousel">
             <div class="category-item">
                 <img src="https://storage.googleapis.com/a1aa/image/EcDACsfuYmzxbCDwmptmAYKHMgI88hOSuVVlfN8vM8ux7WlTA.jpg"
