--- a/contact.html
+++ b/contact.html
@@ -37,10 +37,10 @@
             <p class="description">A fullstack developer with a passion for solving complex problems and building
                 innovative solutions. Let’s collaborate and bring ideas to life through code!</p>
             <div class="social-icons">
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="https://github.com/MatheusPatricioo"><i class="fab fa-github"></i></a>
+                <a href="https://wa.me/31995461381"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://www.linkedin.com/in/matheus-patricio-ab77031b6/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.facebook.com/matheus.patricio.9659"><i class="fab fa-facebook"></i></a>
             </div>
         </section>
 
