--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="nav-links">
             <a href="index.html">Home</a>
             <!-- <a href="#" onclick="toggleAbout()">About</a> -->
-            <a href="#" onclick="scrollToSection('offer')">Skills</a>
+            <!-- <a href="#" onclick="scrollToSection('offer')">Skills</a> -->
             <a href="projects.html">Projects</a>
             <a href="contact.html">Contact</a>
         </div>
