--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                     <div class="bullet"><i class="fab fa-react"></i></div>
                     <div class="bullet"><i class="fab fa-js"></i></div>
                     <div class="bullet"><i class="fab fa-css3-alt"></i></div>
-                    <div class="bullet"><i class="fab fa-html5"></i></div> <!-- Exemplo de mais ícones -->
+                    <div class="bullet"><i class="fab fa-html5"></i></div> 
                     <div class="bullet"><i class="fab fa-node-js"></i></div>
                     <div class="bullet"><i class="fab fa-php"></i></div>
                     <div class="bullet"><i class="fab fa-laravel"></i></div>
                     <div class="bullet"><i class="fab fa-react"></i></div>
                     <div class="bullet"><i class="fab fa-js"></i></div>
                     <div class="bullet"><i class="fab fa-css3-alt"></i></div>
-                    <div class="bullet"><i class="fab fa-html5"></i></div> <!-- Exemplo de mais ícones -->
+                    <div class="bullet"><i class="fab fa-html5"></i></div> 
                     <div class="bullet"><i class="fab fa-node-js"></i></div>
                     <div class="bullet"><i class="fab fa-php"></i></div>
                     <div class="bullet"><i class="fab fa-laravel"></i></div>
